Bug 1149461 - Disable progressive drawing unless the compositor is actively scrolling a tiled layer. r=nical